src/components/CartItem.css
.cartitem__container {
    background-color: white;
    flex: 1;
    padding: 10px;
    z-index: 1;
    display: flex;
    align-items: center;
    border-top: 1px solid rgb(221,221,221);
}

.cartitem__info {
    display: flex;
}

.cartitem__info--image {
    margin: 0 10px 0 30px;
    object-fit: contain;
    max-height: 150px;
}

.cartitem__info--right {
    display: flex;
}

.cartitem__info--title {
    font-size: 18px;
    font-family: sans-serif;
}

.cartitem__info--stars {
    display: flex;
    color: var(--dark-orange);
    padding: 5px;
}

.cartitem__info--price {
    font-size: 18px;
    font-family: sans-serif;
}

.cartitem__actions {
    display: flex;
    align-items: center;
}

.cartitem__deleteitem {
    margin-left: 5px;
    border-left: 1px solid rgb(213, 217, 217);
    padding-left: 10px;
    font-size: 12px;
    color: rgb(0, 113, 133);
    cursor: pointer;
}

.cartitem__deleteitem:hover {
    text-decoration: underline;
}

